src/objects/rh2__PS_Queue__c.object
<CustomObject>
    <description>Management of asynchronous processing in Rollup Helper.</description>
    <fields>
        <fullName>rh2__Batch_Class__c</fullName>
        <label>Batch Class</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rh2__Filter__c</fullName>
        <label>Filter</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rh2__Max_Record_Scope__c</fullName>
        <label>Max Record Scope</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rh2__Notification_Email__c</fullName>
        <label>Notification Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rh2__Params__c</fullName>
        <label>Params</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>rh2__ParentFilter__c</fullName>
        <label>Filter</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rh2__Prevent_Merge__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Prevent_Merge</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rh2__Priority__c</fullName>
        <label>Priority</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rh2__Query__c</fullName>
        <label>Query</label>
        <length>20000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>rh2__Source_Object__c</fullName>
        <label>Source Object</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rh2__Status__c</fullName>
        <label>Status</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rh2__Step_Class__c</fullName>
        <label>Step Class</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rh2__Step_JSON__c</fullName>
        <label>Step JSON</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Rollup Queue</label>
    <nameField>
        <displayFormat>Q-{00000}</displayFormat>
        <label>Rollup Helper Queue Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rollup Queue</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>